# tfops

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: FindTensorFlow.cmake
python/: test.py
src/main/kernels/: dynamic_partition_softmax_grad_kernel.cpp  dynamic_partition_softmax_kernel.cpp  get_topk_neighbor_sparse_kernel.cpp  graph_reduce_grad_kernel.cpp  graph_reduce_kernel.cpp  graph_reduce_with_weight_grad_kernel.cpp  graph_reduce_with_weight_kernel.cpp  graph_reorder_kernel.cpp  ps_kernels.cpp  ps_kernels.h  ps_shard_data.cpp  ps_shard_data.h  ps_utils.h  sample_neighbor_sparse_kernel.cpp  zero_out_kernel.cpp
src/main/ops/: dynamic_partition_softmax.cpp  dynamic_partition_softmax_grad.cpp  get_topk_neighbor_sparse.cpp  graph_reduce.cpp  graph_reduce_grad.cpp  graph_reduce_with_weight.cpp  graph_reduce_with_weight_grad.cpp  graph_reorder.cpp  ps_crud_ops.cpp  ps_ops.h  sample_neighbor_sparse.cpp  zero_out.cpp
